Remove remaining hardcoded game times from frontend demo props - all times now dynamic from MLB API

--- a/frontend/templates/i.html
+++ b/frontend/templates/i.html
@@ -646,7 +646,7 @@
                     total_contracts: 10,
                     status_badge: 'UPCOMING',
                     is_tradeable: true,
-                    formatted_game_time: '7:05 PM EST'
+                    formatted_game_time: 'TBD'
                 },
                 {
                     id: 2,
@@ -662,7 +662,7 @@
                     total_contracts: 10,
                     status_badge: 'LIVE',
                     is_tradeable: false,
-                    formatted_game_time: '7:05 PM EST'
+                    formatted_game_time: 'TBD'
                 },
                 {
                     id: 3,
@@ -678,7 +678,7 @@
                     total_contracts: 10,
                     status_badge: 'FINAL',
                     is_tradeable: false,
-                    formatted_game_time: '7:05 PM EST'
+                    formatted_game_time: 'TBD'
                 }
             ];
         }
